Updated Linkedin Link

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -42,7 +42,7 @@
   "related_applications": [
     {
       "platform": "web",
-      "url": "https://www.linkedin.com/in/dhruv-chheda-52637522a/"
+      "url": "https://www.linkedin.com/in/dhruv-chheda/"
     },
     {
       "platform": "web",
